# metamorph

./: .env  .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  piccolo_conf.py  pyproject.toml  pytest.ini
database/: metamorph.py  tables.py
database/migrations/: 2021-09-02T20-38-34-467484.py
metamorph/: constants.py
metamorph/adapters/: base.py  repository.py  source.py  target.py
metamorph/domain/: model.py
metamorph/entrypoints/: run.py  setup.py
tests/: conftest.py  test_adapters.py  test_fixtures.py
