[tool.poetry]
name = "metamorph"
version = "0.1.0"
description = ""
authors = ["antonio-one <antonio.one@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
piccolo = {extras = ["postgres"], version = "^0.43.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pdbpp = "^0.10.3"
Faker = "^8.12.1"
gitchangelog = "^3.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
