[tool.poetry]
name = "metamorph"
version = "0.1.1"
description = "Write your service events to a postgre table and metamorph will run in the background to push them to kafka."
authors = ["antonio-one <antonio.one@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
piccolo = {extras = ["postgres"], version = "^0.43.0"}
confluent-kafka = "^1.7.0"
psycopg2 = "^2.9.1"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pdbpp = "^0.10.3"
Faker = "^8.12.1"
gitchangelog = "^3.0.4"
docker = "^5.0.2"
pytest-env = "^0.6.2"
pre-commit = "^2.15.0"
black = "^21.8b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
mypy = "^0.910"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
